--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <header>
-    <img src="image/banner.jpg" alt="App Bridge Banner">
+    <img src="images/banner.jpg" alt="App Bridge Banner">
   </header>
 
   <div class="banner-text">
@@ -117,10 +117,10 @@
 
   <script>
     const apps = [
-      { name: "Công Suất Sạc", icon: "image/chargin-power-logo.png", desc: "Track charging current, power, and detailed battery status", url: "https://play.google.com/store/apps/details?id=vn.lecon.device.info" },
-      { name: "Ngày Gọn Gàng", icon: "image/ngay-gon-gang-logo.png", desc: "Quản lý công việc trong ngày, đơn giản, hiệu quả, không cần tài khoản", url: "https://play.google.com/store/apps/details?id=vn.lecon.smart_todo_list" },
-      { name: "Kết Nối WiFi", icon: "image/wifi-connection-logo.png", desc: "Tìm và kết nối Wi-Fi xung quanh dễ dàng, nhanh chóng và tiện lợi", url: "https://play.google.com/store/apps/details?id=vn.icheck.connect.wifi" },
-      { name: "Tải Nhiều File(s)", icon: "image/tai-nhieu-files-logo.png", desc: "Ứng dụng giúp bạn tải cả một danh sách hàng trăm file một cách nhanh chóng", url: "https://play.google.com/store/apps/details?id=vn.lecon.download.files" }
+      { name: "Công Suất Sạc", icon: "images/chargin-power-logo.png", desc: "Track charging current, power, and detailed battery status", url: "https://play.google.com/store/apps/details?id=vn.lecon.device.info" },
+      { name: "Ngày Gọn Gàng", icon: "images/ngay-gon-gang-logo.png", desc: "Quản lý công việc trong ngày, đơn giản, hiệu quả, không cần tài khoản", url: "https://play.google.com/store/apps/details?id=vn.lecon.smart_todo_list" },
+      { name: "Kết Nối WiFi", icon: "images/wifi-connection-logo.png", desc: "Tìm và kết nối Wi-Fi xung quanh dễ dàng, nhanh chóng và tiện lợi", url: "https://play.google.com/store/apps/details?id=vn.icheck.connect.wifi" },
+      { name: "Tải Nhiều File(s)", icon: "images/tai-nhieu-files-logo.png", desc: "Ứng dụng giúp bạn tải cả một danh sách hàng trăm file một cách nhanh chóng", url: "https://play.google.com/store/apps/details?id=vn.lecon.download.files" }
     ];
 
     const appList = document.getElementById("appList");
