--- a/charging-power-policy.html
+++ b/charging-power-policy.html
@@ -10,7 +10,7 @@
       max-width: 800px;
       margin: 0 auto;
       padding: 20px;
-      background-color: #FFF5E1;
+      background-color: #FFFFFF;
       color: #333;
       line-height: 1.6;
     }
