--- a/fast-charge-checker-policy.html
+++ b/fast-charge-checker-policy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy – Fast Charge Checker/title>
+  <title>Privacy Policy – Fast Charge Checker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -38,9 +38,9 @@
   </style>
 </head>
 <body>
-  <h1>Privacy Policy – Fast Charge Checker/h1>
+  <h1>Privacy Policy – Fast Charge Checker</h1>
 
-  <p>Thank you for using <strong>Fast Charge Checker/strong>. Your privacy is important to us. This Privacy Policy explains how we handle information when you use our App.</p>
+  <p>Thank you for using <strong>Fast Charge Checker</strong>. Your privacy is important to us. This Privacy Policy explains how we handle information when you use our App.</p>
 
   <h2>1. Information We Collect</h2>
   <p>The App does not collect, store, or share any personal information such as your name, email, phone number, or contacts.</p>
