--- a/wedding.html
+++ b/wedding.html
@@ -1,274 +1,117 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Thiệp HTML - Chúc mừng</title>
+<meta charset="UTF-8">
+<title>Thiệp cưới</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-  :root{
-    --bg1: #ff9a9e;
-    --bg2: #fad0c4;
-    --card-bg: rgba(255,255,255,0.9);
-    --accent: #ff6f91;
-    --text: #333;
-    --shadow: 0 10px 30px rgba(0,0,0,0.12);
-    --radius: 18px;
-    --glass: rgba(255,255,255,0.55);
-  }
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{
-    margin:0;
-    font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    background: linear-gradient(135deg,var(--bg1),var(--bg2));
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:28px;
-    color:var(--text);
-  }
+    body {
+        margin: 0;
+        font-family: "Playfair Display", serif;
+        background: #fdf6f8;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
 
-  .card{
-    width:100%;
-    max-width:980px;
-    border-radius:var(--radius);
-    box-shadow:var(--shadow);
-    overflow:hidden;
-    display:flex;
-    gap:0;
-    background: linear-gradient(180deg, rgba(255,255,255,0.85), rgba(255,255,255,0.8));
-    transform-origin:center;
-    animation: pop .6s ease;
-  }
+    .card {
+        width: 700px;
+        background: white;
+        border-radius: 18px;
+        padding: 40px 60px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.07);
+        overflow: hidden;
+        position: relative;
+        color: #6b4e5a;
+    }
 
-  @keyframes pop{
-    from{transform:scale(.98); opacity:0}
-    to{transform:scale(1); opacity:1}
-  }
+    /* Hoa trang trí */
+    .flowers {
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: 150px;
+        pointer-events: none;
+        opacity: 0.8;
+    }
+    .top-flower { top: 0; }
+    .bottom-flower { bottom: 0; transform: rotate(180deg); }
 
-  /* Left content */
-  .content{
-    flex:1 1 520px;
-    padding:36px;
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-    gap:18px;
-    min-width:260px;
-  }
-  .logo{
-    width:56px;height:56px;border-radius:12px;
-    background:linear-gradient(135deg,var(--accent), #ff9472);
-    display:flex;align-items:center;justify-content:center;
-    color:white;font-weight:700;font-size:18px;
-    box-shadow:0 6px 18px rgba(0,0,0,0.08);
-  }
+    .title {
+        text-align: center;
+        font-size: 42px;
+        margin-top: 90px;
+        color: #d16c84;
+        letter-spacing: 1px;
+    }
 
-  .title{
-    font-size:28px;
-    font-weight:700;
-    margin:6px 0 0 0;
-    letter-spacing:-0.4px;
-  }
-  .subtitle{
-    color:#6b6b6b;
-    margin-top:6px;
-    font-size:14px;
-  }
+    .names {
+        text-align: center;
+        font-size: 54px;
+        margin: 20px 0 10px;
+        font-weight: bold;
+        color: #c15a77;
+    }
 
-  .message{
-    margin-top:12px;
-    font-size:18px;
-    line-height:1.55;
-    color: #2d2d2d;
-    white-space:pre-line;
-  }
+    .and {
+        display: block;
+        text-align: center;
+        font-size: 28px;
+        color: #aa4d66;
+        margin-bottom: 10px;
+    }
 
-  .meta{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    gap:12px;
-    margin-top:18px;
-  }
-  .from{
-    font-weight:600;
-    color:#444;
-  }
+    .invite {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 20px;
+        color: #77535d;
+        line-height: 1.6;
+    }
 
-  /* Right hero */
-  .hero{
-    flex:0 0 360px;
-    min-width:260px;
-    background-image:
-      radial-gradient(circle at 10% 20%, rgba(255,255,255,0.25), transparent 12%),
-      url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="800" height="800"><defs><linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="%23ffecd2"/><stop offset="1" stop-color="%23fcb69f"/></linearGradient></defs><rect width="100%" height="100%" fill="url(%23g)"/><g transform="translate(120,120)"><path d="M0 200 C 80 80, 220 80, 300 200 C 380 320, 520 320, 600 200 L600 520 L0 520 Z" fill="%23fff" opacity="0.08"/></g></svg>');
-    background-size:cover;
-    background-position:center;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:30px;
-    position:relative;
-  }
+    .date-place {
+        text-align: center;
+        margin-top: 35px;
+        font-size: 22px;
+        color: #734c59;
+        line-height: 1.7;
+    }
 
-  .shape{
-    width:220px;height:220px;border-radius:20px;
-    background:linear-gradient(135deg, rgba(255,255,255,0.6), rgba(255,255,255,0.45));
-    box-shadow:0 12px 30px rgba(0,0,0,0.08);
-    display:flex;align-items:center;justify-content:center;
-    flex-direction:column;text-align:center;padding:16px;
-    backdrop-filter: blur(6px);
-  }
-  .shape h2{margin:0;font-size:22px;color:var(--accent)}
-  .shape p{margin:8px 0 0 0;font-size:13px;color:#444}
-
-  /* confetti (simple) */
-  .confetti {
-    position:absolute;
-    inset:0;
-    pointer-events:none;
-    overflow:hidden;
-  }
-  .confetti i{
-    position:absolute;
-    width:10px;height:18px;
-    background:rgba(255,255,255,0.9);
-    transform:rotate(25deg);
-    animation: fall 3.2s linear infinite;
-    opacity:0.95;
-    border-radius:2px;
-  }
-  @keyframes fall{
-    0%{transform:translateY(-20vh) rotate(0deg) scale(0.9); opacity:1}
-    100%{transform:translateY(110vh) rotate(360deg) scale(1); opacity:0.9}
-  }
-
-  /* responsive */
-  @media (max-width:820px){
-    .card{flex-direction:column}
-    .hero{flex:0 0 220px;padding:20px}
-  }
-  @media (max-width:420px){
-    .title{font-size:20px}
-    .message{font-size:16px}
-  }
-
-  /* button */
-  .actions{display:flex;gap:10px;flex-wrap:wrap}
-  .btn{
-    padding:10px 14px;border-radius:12px;border:0;cursor:pointer;
-    font-weight:600;background:var(--accent);color:white;box-shadow:0 6px 18px rgba(0,0,0,0.08)
-  }
-  .btn.ghost{background:transparent;color:var(--accent);border:2px solid rgba(255,111,145,0.12)}
+    .footer {
+        text-align: center;
+        margin-top: 55px;
+        font-size: 18px;
+        color: #8d6674;
+    }
 </style>
 </head>
 <body>
-  <div class="card" role="region" aria-label="Thiệp chúc mừng">
-    <div class="content">
-      <div style="display:flex;align-items:center;gap:14px">
-        <div class="logo">TP</div>
-        <div>
-          <div class="title">Gửi đến: <span id="toName">RECIPIENT</span></div>
-          <div class="subtitle">Một chút lời chúc từ người bạn thân</div>
-        </div>
-      </div>
 
-      <div>
-        <div class="message" id="messageText">
-          Xin chúc bạn một ngày thật tuyệt vời! 🌟
-          
-Hãy giữ nụ cười và tiếp tục tỏa sáng.
-        </div>
-      </div>
+<div class="card">
+    <img class="flowers top-flower" src="https://i.imgur.com/4z4QX4K.png" alt="">
+    <img class="flowers bottom-flower" src="https://i.imgur.com/4z4QX4K.png" alt="">
 
-      <div class="meta">
-        <div class="from">Thân mến, <span id="fromName">SENDER</span></div>
-        <div class="actions">
-          <button class="btn" onclick="downloadPNG()">Tải ảnh</button>
-          <button class="btn ghost" onclick="toggleMessage()">Đổi lời</button>
-        </div>
-      </div>
+    <div class="title">Thiệp Mời</div>
+    <div class="names">An & Bình</div>
+    <span class="and">💞</span>
+
+    <div class="invite">
+        Trân trọng kính mời<br>
+        <strong>Quý khách</strong><br>
+        đến chung vui cùng chúng tôi<br>
+        trong lễ thành hôn
     </div>
 
-    <div class="hero" aria-hidden="true">
-      <div class="shape" role="img" aria-label="Hình trang trí">
-        <h2>Chúc mừng</h2>
-        <p>Chúc bạn luôn hạnh phúc</p>
-      </div>
-
-      <div class="confetti" id="confetti"></div>
+    <div class="date-place">
+        📅 <strong>Chủ Nhật – 24/12/2025 — 10:00 AM</strong><br>
+        📍 <strong>Nhà hàng Hoa Sen Tiệc Cưới – TP. Hồ Chí Minh</strong>
     </div>
-  </div>
 
-<script>
- // small confetti generator
- (function makeConfetti(){
-   const wrap = document.getElementById('confetti');
-   const colors = ['#ffd166','#06d6a0','#118ab2','#ef476f','#ffd6a5'];
-   for(let i=0;i<18;i++){
-     const el = document.createElement('i');
-     el.style.left = (Math.random()*100)+'%';
-     el.style.top = (Math.random()*-40)+'%';
-     el.style.width = (6 + Math.random()*12) + 'px';
-     el.style.height = (10 + Math.random()*22) + 'px';
-     el.style.background = colors[Math.floor(Math.random()*colors.length)];
-     el.style.animationDelay = (Math.random()*2)+'s';
-     el.style.transform = 'rotate('+(Math.random()*360)+'deg)';
-     wrap.appendChild(el);
-   }
- })();
+    <div class="footer">
+        Sự hiện diện của quý vị là niềm vinh hạnh cho gia đình chúng tôi 🌸
+    </div>
+</div>
 
- // quick customization helpers
- function setRecipient(name){ document.getElementById('toName').textContent = name; }
- function setSender(name){ document.getElementById('fromName').textContent = name; }
- function setMessage(text){ document.getElementById('messageText').textContent = text; }
-
- // small UI actions
- function toggleMessage(){
-   const text = prompt('Nhập nội dung thiệp mới:', document.getElementById('messageText').textContent);
-   if(text!==null) setMessage(text);
- }
-
- // Download card as PNG using html2canvas-like approach (minimal)
- // We'll use foreignObject + SVG -> PNG technique (works in modern browsers)
- function downloadPNG(){
-   const card = document.querySelector('.card');
-   const w = card.offsetWidth;
-   const h = card.offsetHeight;
-   const data = `
-     <svg xmlns='http://www.w3.org/2000/svg' width='${w}' height='${h}'>
-       <foreignObject width='100%' height='100%'>
-         ${new XMLSerializer().serializeToString(card)}
-       </foreignObject>
-     </svg>`;
-   const svgBlob = new Blob([data], {type: 'image/svg+xml;charset=utf-8'});
-   const url = URL.createObjectURL(svgBlob);
-   const img = new Image();
-   img.onload = function(){
-     const canvas = document.createElement('canvas');
-     canvas.width = w*2; canvas.height = h*2;
-     const ctx = canvas.getContext('2d');
-     ctx.scale(2,2);
-     ctx.fillStyle = window.getComputedStyle(document.body).background;
-     ctx.fillRect(0,0,w,h);
-     ctx.drawImage(img,0,0);
-     URL.revokeObjectURL(url);
-     const png = canvas.toDataURL('image/png');
-     const a = document.createElement('a');
-     a.href = png; a.download = 'card.png';
-     a.click();
-   };
-   img.onerror = function(){
-     alert('Trình duyệt không hỗ trợ xuất ảnh tự động. Hãy chụp màn hình thay thế.');
-   };
-   img.src = url;
- }
-
- // Example: prefill with nicer text
- setRecipient('Bạn thân');
- setSender('Vũ Lê');
- setMessage('Chúc bạn một ngày tràn đầy năng lượng và niềm vui!\nCố lên nhé 💪');
-</script>
 </body>
 </html>
